[gd_scene load_steps=13 format=3 uid="uid://dwrgxipppsvqh"]

[ext_resource type="Theme" uid="uid://bwnv8b362a2w7" path="res://menus/menu_theme.tres" id="1_1ujy8"]
[ext_resource type="Script" path="res://menus/pause_menu.gd" id="2_pidyc"]
[ext_resource type="Texture2D" uid="uid://f31wo0r2o6kq" path="res://assets/art/ui/no_badge.png" id="3_eqqe3"]
[ext_resource type="PackedScene" uid="uid://bm7ghcdrm434f" path="res://ui/pause_background.tscn" id="3_ftsg2"]
[ext_resource type="PackedScene" uid="uid://joajaspr73lg" path="res://menus/scores/ScoreItem.tscn" id="8_0vvwh"]
[ext_resource type="PackedScene" uid="uid://bn0833ujao2xi" path="res://menus/settings_menu.tscn" id="11_fn1u2"]
[ext_resource type="PackedScene" uid="uid://cgn5lp08830p8" path="res://ui/transition.tscn" id="11_um3xt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t3tpc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_glaec"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rexfr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qojev"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ydaid"]

[node name="pause_menu" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1ujy8")
color = Color(0, 0, 0, 0.980392)
script = ExtResource("2_pidyc")

[node name="pause_background" parent="." instance=ExtResource("3_ftsg2")]
layout_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.0
offset_top = 48.0
offset_right = 225.0
offset_bottom = 268.0
grow_horizontal = 2
theme_override_constants/separation = 12

[node name="pause_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "Paused"
horizontal_alignment = 1

[node name="level_name" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 96
text = "Level 1-1"
horizontal_alignment = 1

[node name="main" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 192.0
grow_horizontal = 2
grow_vertical = 2

[node name="main_content" type="HBoxContainer" parent="main"]
visible = false
layout_mode = 2
theme_override_constants/separation = 48
alignment = 1

[node name="scores_and_xp" type="HBoxContainer" parent="main/main_content"]
custom_minimum_size = Vector2(500, 700)
layout_mode = 2
theme_override_constants/separation = 32

[node name="score" type="VBoxContainer" parent="main/main_content/scores_and_xp"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="best_time_section" type="HBoxContainer" parent="main/main_content/scores_and_xp/score"]
layout_mode = 2
alignment = 1

[node name="best_time_badge" type="TextureRect" parent="main/main_content/scores_and_xp/score/best_time_section"]
layout_mode = 2
texture = ExtResource("3_eqqe3")
expand_mode = 3

[node name="time" type="VBoxContainer" parent="main/main_content/scores_and_xp/score/best_time_section"]
layout_mode = 2

[node name="best_time_label" type="Label" parent="main/main_content/scores_and_xp/score/best_time_section/time"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "00:00:000"

[node name="label" type="Label" parent="main/main_content/scores_and_xp/score/best_time_section/time"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 36
text = "Best Time"

[node name="pawprints" type="VBoxContainer" parent="main/main_content/scores_and_xp"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
alignment = 1

[node name="diamond" type="HBoxContainer" parent="main/main_content/scores_and_xp/pawprints"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="main/main_content/scores_and_xp/pawprints/diamond"]
layout_mode = 2
expand_mode = 3

[node name="diamond_time_label" type="Label" parent="main/main_content/scores_and_xp/pawprints/diamond"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "59:59:000"
horizontal_alignment = 1
vertical_alignment = 2

[node name="gold" type="HBoxContainer" parent="main/main_content/scores_and_xp/pawprints"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="main/main_content/scores_and_xp/pawprints/gold"]
layout_mode = 2
expand_mode = 3

[node name="gold_time_label" type="Label" parent="main/main_content/scores_and_xp/pawprints/gold"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "59:59:000"
horizontal_alignment = 1
vertical_alignment = 2

[node name="silver" type="HBoxContainer" parent="main/main_content/scores_and_xp/pawprints"]
layout_mode = 2
alignment = 1

[node name="silver_texture" type="TextureRect" parent="main/main_content/scores_and_xp/pawprints/silver"]
layout_mode = 2
expand_mode = 3

[node name="silver_time_label" type="Label" parent="main/main_content/scores_and_xp/pawprints/silver"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "59:59:000"
horizontal_alignment = 1
vertical_alignment = 2

[node name="bronze" type="HBoxContainer" parent="main/main_content/scores_and_xp/pawprints"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="main/main_content/scores_and_xp/pawprints/bronze"]
layout_mode = 2
expand_mode = 3

[node name="bronze_time_label" type="Label" parent="main/main_content/scores_and_xp/pawprints/bronze"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "59:59:000"
horizontal_alignment = 1
vertical_alignment = 2

[node name="leaderboard" type="VBoxContainer" parent="main/main_content"]
custom_minimum_size = Vector2(1000, 700)
layout_mode = 2

[node name="leaderboard_label" type="Label" parent="main/main_content/leaderboard"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
text = "Leaderboards"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="main/main_content/leaderboard"]
custom_minimum_size = Vector2(1050, 600)
layout_mode = 2

[node name="score_container" type="VBoxContainer" parent="main/main_content/leaderboard/ScrollContainer"]
layout_mode = 2

[node name="OtherScoreItem" parent="main/main_content/leaderboard/ScrollContainer/score_container" instance=ExtResource("8_0vvwh")]
layout_mode = 2

[node name="buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 48.0
offset_right = 336.0
offset_bottom = 396.0
theme_override_constants/separation = 12

[node name="resume_button" type="Button" parent="buttons"]
custom_minimum_size = Vector2(288, 60)
layout_mode = 2
focus_neighbor_left = NodePath(".")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_t3tpc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_glaec")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rexfr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qojev")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ydaid")
text = "Resume
"

[node name="restart_button" type="Button" parent="buttons"]
custom_minimum_size = Vector2(288, 60)
layout_mode = 2
focus_neighbor_left = NodePath(".")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_t3tpc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_glaec")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rexfr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qojev")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ydaid")
text = "Restart Level"

[node name="settings_button" type="Button" parent="buttons"]
custom_minimum_size = Vector2(288, 60)
layout_mode = 2
focus_neighbor_left = NodePath(".")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_t3tpc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_glaec")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rexfr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qojev")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ydaid")
text = "Settings"

[node name="quit_button" type="Button" parent="buttons"]
custom_minimum_size = Vector2(288, 60)
layout_mode = 2
focus_neighbor_left = NodePath(".")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_t3tpc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_glaec")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rexfr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qojev")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ydaid")
text = "Quit Game"

[node name="main_menu_button" type="Button" parent="buttons"]
visible = false
custom_minimum_size = Vector2(288, 60)
layout_mode = 2
focus_neighbor_left = NodePath(".")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_t3tpc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_glaec")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rexfr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qojev")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ydaid")
text = "Main Menu"

[node name="settings_menu" parent="." instance=ExtResource("11_fn1u2")]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0

[node name="transition" parent="." instance=ExtResource("11_um3xt")]
layout_mode = 1

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 936.0
offset_top = 552.0
offset_right = 976.0
offset_bottom = 625.0
text = "NA"

[connection signal="pressed" from="buttons/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="buttons/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="buttons/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="buttons/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="buttons/main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="hide_menu" from="settings_menu" to="." method="_on_hide_menu"]
